--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,11 +17,10 @@ jobs:
   unpack-deb-package:
     # The type of runner that the job will run on
     runs-on: ubuntu-22.04
-
+    # Run in debian docker container
+    container: debian:12
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
 
       - name: Update package info and install wget
         run: apt update && apt install -y wget
