--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -57,10 +57,16 @@ jobs:
       - name: Allow the builduser passwordless sudo
         run: printf 'builduser ALL=(ALL) ALL\n' | tee -a /etc/sudoers
 
+      - name: Change user
+        run: su user
+
+      - name: Change workdir to home
+        run: cd $HOME
+
       - uses: actions/checkout@v4
 
       - name: Build Arch Linux package
-        run: sudo -u builduser bash -c 'makepkg -s --noconfirm'
+        run: makepkg -s --noconfirm
 
       - uses: actions/upload-artifact@v3
         with:
