--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,13 +43,10 @@ jobs:
       image: archlinux:base-devel
     steps:
       - name: Update Arch Linux image
-        run: pacman -Syu --noconfirm
+        run: pacman -Syu --noconfirm wget
 
       - name: Add builduser
         run: useradd builduser -m
-
-      - name: Change working directory
-        run: cd /home/builduser
 
       - name: Delete the buildusers password
         run: passwd -d builduser
@@ -57,11 +54,12 @@ jobs:
       - name: Allow the builduser passwordless sudo
         run: printf 'builduser ALL=(ALL) ALL\n' | tee -a /etc/sudoers
 
-      - uses: actions/checkout@v4
+      - uses: Download PKGBUILD
+        run: wget https://raw.githubusercontent.com/d3spairx/lantern-distro-port/main/PKGBUILD -P /home/builduser
 
       - name: Build Arch Linux package
-        run: sudo -u builduser bash -c "makepkg -s --noconfirm"
+        run: sudo -u builduser bash -c "cd $HOME && makepkg -s --noconfirm"
 
       - uses: actions/upload-artifact@v3
         with:
-          path: lantern-7.4.0-1-x86_64.pkg.tar.zst
+          path: /home/builduser/lantern-7.4.0-1-x86_64.pkg.tar.zst
