--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -45,8 +45,8 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Build archlinux package
-        uses: mijailr/arch-makepkg-action@1.0.1
+        uses: py7hon/arch-makepkg@v0.0.2
 
       - uses: actions/upload-artifact@v3
         with:
-          path: /home/builduser/lantern-7.4.0-1-x86_64.pkg.tar.zst
+          path: lantern-7.4.0-1-x86_64.pkg.tar.zst
