--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -44,16 +44,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Build archlinux package
-        uses: samarthj/arch-pkgbuild-action@v2.6
-        with:
-          dry_run: true
-          custom_build_cmd: makepkg -cfC --needed --nodeps --noconfirm
-          pkgbuild_root: "."
-          aur_email: ""
-          aur_ssh_private_key: ""
-          aur_username: ""
+      - name: Makepkg build and Check
+        id: makepkg
+        uses: edlanglois/pkgbuild-action@v1.1.8
+
+      - name: Print package files
+        run: |
+          echo "Successfully built package"
+          echo "Package: ${{ steps.makepkg.outputs.pkgfile0 }}"
 
       - uses: actions/upload-artifact@v3
         with:
-          path: lantern-7.4.0-1-x86_64.pkg.tar.zst
+          path: ${{ steps.makepkg.outputs.pkgfile0 }}
