--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -64,6 +64,11 @@ jobs:
     runs-on: ubuntu-22.04
     needs: unpack-deb-package
     steps:
+      - uses: actions/checkout@v4
+        with:
+          sparse-checkout: nfpm.yaml
+          sparse-checkout-cone-mode: false
+
       - uses: actions/cache/restore@v3
         with:
           key: unpacked-lantern
@@ -76,7 +81,7 @@ jobs:
           sudo apt install nfpm
 
       - name: Build rpm
-        run: nfpm pkg --packager rpm --target /tmp
+        run: nfpm pkg --packager rpm --config $GITHUB_WORKSPACE/nfpm.yaml --target /tmp
 
       - uses: actions/upload-artifact@v3
         with:
@@ -89,6 +94,11 @@ jobs:
     runs-on: ubuntu-22.04
     needs: unpack-deb-package
     steps:
+      - uses: actions/checkout@v4
+        with:
+          sparse-checkout: nfpm.yaml
+          sparse-checkout-cone-mode: false
+
       - uses: actions/cache/restore@v3
         with:
           key: unpacked-lantern
@@ -101,7 +111,7 @@ jobs:
           sudo apt install nfpm
 
       - name: Build rpm
-        run: nfpm pkg --packager apk --target /tmp
+        run: nfpm pkg --packager apk --config $GITHUB_WORKSPACE/nfpm.yaml --target /tmp
 
       - uses: actions/upload-artifact@v3
         with:
@@ -114,6 +124,11 @@ jobs:
     runs-on: ubuntu-22.04
     needs: unpack-deb-package
     steps:
+      - uses: actions/checkout@v4
+        with:
+          sparse-checkout: nfpm.yaml
+          sparse-checkout-cone-mode: false
+
       - uses: actions/cache/restore@v3
         with:
           key: unpacked-lantern
@@ -126,11 +141,11 @@ jobs:
           sudo apt install nfpm
 
       - name: Build rpm
-        run: nfpm pkg --packager apk --target /tmp
+        run: nfpm pkg --packager archlinux --config $GITHUB_WORKSPACE/nfpm.yaml --target /tmp
 
       - uses: actions/upload-artifact@v3
         with:
-          path: /tmp/*.apk
+          path: /tmp/*.pkg.tar.zst
           name: archlinux-package-archive
           if-no-files-found: error
           retention-days: 5
