--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -76,6 +76,12 @@ jobs:
           key: unpacked-lantern
           path: ~/lantern
 
+      - name: "[TEST] list cache"
+        run: |
+          sudo apt update
+          sudo apt install -y tree
+          tree ~/lantern
+
       - name: Install nFPM
         run: |
           echo 'deb [trusted=yes] https://repo.goreleaser.com/apt/ /' | sudo tee /etc/apt/sources.list.d/goreleaser.list
